cabal-version:      2.4
name:               heftia-game-dsl-demo
version:            0.2.0.0

-- A short (one-line) description of the package.
synopsis: Handlers for standard effects using Heftia.

-- A longer description of the package.
description:
    A demonstration for [Heftia](https://hackage.haskell.org/package/heftia-game-dsl-demo).

-- A URL where users can report bugs.
bug-reports: https://github.com/sayo-hs/heftia-game-dsl-demo

-- The license under which the package is released.
license:            MPL-2.0
license-file:       LICENSE
author:             Yamada Ryo <ymdfield@outlook.jp>
maintainer:         Yamada Ryo <ymdfield@outlook.jp>

-- A copyright notice.
copyright: 2023 Yamada Ryo
category: Control, Effect, Monads

extra-source-files:
    ChangeLog.md
    NOTICE
    README.md

tested-with:
    GHC == 9.2.8

source-repository head
    type: git
    location: https://github.com/sayo-hs/heftia-game-dsl-demo
    tag: v0.2.0
    subdir: heftia-effects

common common-base
    ghc-options:      -Wall
    default-language: GHC2021

    default-extensions:
        LambdaCase,
        DerivingStrategies,
        DataKinds,
        TypeFamilies,
        BlockArguments,
        FunctionalDependencies,
        RecordWildCards,
        DefaultSignatures,
        PatternSynonyms

    build-depends:
        base ^>= 4.16,
        ghc-typelits-knownnat ^>= 0.7,
        heftia-effects ^>= 0.2,
        keycode ^>= 0.2.2,
        mtl ^>= 2.2.2,
        linear ^>= 1.21.10,
        text ^>= 1.2.5.0,
        containers,
        extra,
        transformers

    ghc-options: -Wall -fplugin GHC.TypeLits.KnownNat.Solver

library
    import: common-base

    exposed-modules:
        Game.HeftWorld.World
        Game.HeftWorld.Entity
        Game.HeftWorld.Block
        Game.HeftWorld.IO

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:

    hs-source-dirs:   src

test-suite test
    import: common-base

    main-is: Driver.hs
    hs-source-dirs: test
    build-depends:
        heftia-game-dsl-demo,
        tasty                         ^>= 1.4,
        tasty-hunit                   ^>= 0.10,

    build-tool-depends:
        tasty-discover:tasty-discover

    type: exitcode-stdio-1.0


executable heftia-game-dsl-demo
    import: common-base

    main-is: Main.hs
    hs-source-dirs: app/
    build-depends:
        heftia-game-dsl-demo,
        sdl2 ^>= 2.5.5,
        sdl2-ttf ^>= 2.1.3,
